objects/service-open-webui.yaml
apiVersion: v1
kind: Service
metadata:
  name: open-webui
  namespace: aitools
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: open-webui
  ipFamilyPolicy: SingleStack
  ipFamilies:
  - IPv4
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
