objects/service-otari.yaml
apiVersion: v1
kind: Service
metadata:
  name: otari
  namespace: aitools
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: otari
  ipFamilyPolicy: SingleStack
  ipFamilies:
  - IPv4
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
