objects/service-tinyproxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: tinyproxy
  namespace: aitools
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: tinyproxy
  ipFamilyPolicy: SingleStack
  ipFamilies:
  - IPv4
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8888
