objects/ingress-otari.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otari
  namespace: aitools
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  rules:
  - host: otari-web.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: otari
            port:
              number: 80
